--- a/src/style/BlogArticle.scss
+++ b/src/style/BlogArticle.scss
@@ -1,6 +1,2 @@
 @import './Base';
 @include Base;
-
-.blogArticle {
-    padding: 0 10vw;
-}
